--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  
+  # Testing
+  mockito: ^5.4.4
+  mocktail: ^1.0.1
+  build_runner: ^2.4.7
+  test: ^1.24.9
+  
+  # Coverage
+  coverage: ^1.7.2
 
 dependency_overrides:
   web: ^1.0.0
