--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   image_picker: ^1.0.7
   camera: ^0.10.5+9
   
+  # OCR & Text Recognition
+  google_mlkit_text_recognition: ^0.11.0
+  google_mlkit_commons: ^0.6.0
+  
   # Notifications
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
@@ -76,6 +80,7 @@ dev_dependencies:
   mocktail: ^1.0.1
   build_runner: ^2.4.7
   test: ^1.24.9
+  sqflite_common_ffi: ^2.3.2
   
   # Coverage
   coverage: ^1.7.2
